objects/Option__c.object
<CustomObject>
    <fields>
        <fullName>MessageLive__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>MessageLive</label>
        <referenceTo>MessageLive__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptionText__c</fullName>
        <description>The text to present the user for this option</description>
        <inlineHelpText>Please enter the text to display to the user in the pre-agent chat to help him / her select the right support channel.</inlineHelpText>
        <label>Option Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_No__c</fullName>
        <label>Option No</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>